--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action = '#' method = 'post'>
+		<label for = 'name'>Name</label>
+		<input type = 'text' id = 'name' placeholder = 'Manish'>
+		<br>
+		<label for = 'phone'>Mobile</label>
+		<input type = 'number' id = 'phone' placeholder = '+91 9812258830'>
+		<br>
+		<label for = 'address'>Address</label>
+		<input type = 'text' placeholder = 'Address'>
+		<br>
+		<label for = 'checkbox'>Have you ever lived with a Dog before?</label>
+		<input type = 'checkbox' name = 'Checkbox' value = 'Yes'>Yes
+		<input type = 'checkbox' name = 'Checkbox' value = 'No'>No
+		<br>
+		<label for = 'multiSelect'>Please select your preferred breeds</label>
+		<select id = 'multiSelect'>
+			<option>Select</option>
+			<option>German Shephard</option>
+			<option>Pitbull</option>
+			<option>Bulldog</option>
+		</select>
+		<br>
+		<button type = 'submit' id = 'submit'>Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
