--- a/main.html
+++ b/main.html
@@ -10,17 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<form action = '#' method = 'post'>
 		<label for = 'name'>Name</label>
-		<input type = 'text' id = 'name' placeholder = 'Manish'>
+		<input type = 'text' id = 'name' placeholder = 'Name'>
 		<br>
-		<label for = 'phone'>Mobile</label>
-		<input type = 'number' id = 'phone' placeholder = '+91 9812258830'>
+		<label for = 'phone'>Phone Number</label>
+		<input type = 'text' id = 'phone' placeholder = 'Phone Number'>
 		<br>
 		<label for = 'address'>Address</label>
-		<input type = 'text' placeholder = 'Address'>
+		<input type = 'text' id = 'address' placeholder = 'Address'>
 		<br>
-		<label for = 'checkbox'>Have you ever lived with a Dog before?</label>
-		<input type = 'checkbox' name = 'Checkbox' value = 'Yes'>Yes
-		<input type = 'checkbox' name = 'Checkbox' value = 'No'>No
+		<input type="checkbox" id="checkbox" name="checkbox" value="Have you ever lived with a Dog before?">
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
 		<br>
 		<label for = 'multiSelect'>Please select your preferred breeds</label>
 		<select id = 'multiSelect'>
