--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 			<option>Bulldog</option>
 		</select>
 		<br>
-		<button type = 'submit' id = 'submit'>Submit</button>
+		<input type = 'submit' id = 'submit' value = 'Submit'>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
